...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/callServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:nestedScrollingEnabled="true"
            android:onClick="callService"
            android:text="@string/all_button"
...
